RESOLVED FIXED28707
[Chromium] Complex text doesn't show up with text stroking
https://bugs.webkit.org/show_bug.cgi?id=28707
Summary [Chromium] Complex text doesn't show up with text stroking
Yusuke Sato
Reported 2009-08-25 03:41:39 PDT
Chromium can't render complex text with -webkit-text-stroke-width style. This causes LayoutTests/fast/text/stroking-decorations.html and LayoutTests/fast/text/stroking.html tests to fail. http://code.google.com/p/chromium/issues/detail?id=20130
Attachments
complex_text_v1 (1.24 KB, patch)
2009-08-25 04:05 PDT, Yusuke Sato
no flags
complex_text_v2 (1.25 KB, patch)
2009-08-25 04:17 PDT, Yusuke Sato
no flags
complex_text_second_fix_v1 (2.77 KB, patch)
2009-08-25 23:26 PDT, Yusuke Sato
fishd: review-
complex_text_second_fix_v2 (2.79 KB, patch)
2009-08-26 00:11 PDT, Yusuke Sato
no flags
Yusuke Sato
Comment 1 2009-08-25 04:05:09 PDT
Created attachment 38539 [details] complex_text_v1 --- 2 files changed, 13 insertions(+), 1 deletions(-)
Yusuke Sato
Comment 2 2009-08-25 04:17:55 PDT
Created attachment 38540 [details] complex_text_v2 --- 2 files changed, 13 insertions(+), 1 deletions(-)
Eric Seidel (no email)
Comment 3 2009-08-25 09:29:00 PDT
Comment on attachment 38540 [details] complex_text_v2 Clearing flags on attachment: 38540 Committed r47748: <http://trac.webkit.org/changeset/47748>
Eric Seidel (no email)
Comment 4 2009-08-25 09:29:03 PDT
All reviewed patches have been landed. Closing bug.
Yusuke Sato
Comment 5 2009-08-25 23:26:11 PDT
Created attachment 38600 [details] complex_text_second_fix_v1 --- 3 files changed, 26 insertions(+), 7 deletions(-)
Yusuke Sato
Comment 6 2009-08-25 23:27:41 PDT
Uploaded second patch as per Dirk's suggestion.
Darin Fisher (:fishd, Google)
Comment 7 2009-08-25 23:40:00 PDT
Comment on attachment 38600 [details] complex_text_second_fix_v1 > +2009-08-25 Yusuke Sato <yusukes@chromium.org> ... > + Added extra NULL checks for HDC. This is the second fix for issue 28707, > + and the fix is similar to http://trac.webkit.org/changeset/45482. nit: please do not include tabs in the ChangeLog. R- for this reason. > +++ b/WebCore/platform/graphics/chromium/UniscribeHelper.cpp > + if (dc) { > + if (firstRun) { > + oldFont = SelectObject(dc, shaping.m_hfont); > + firstRun = false; > + } else > + SelectObject(dc, shaping.m_hfont); > + } This is OK, but maybe it should use the useWindowsDrawing local variable instead just as the code within the for loop does. What do you think? -Darin
Yusuke Sato
Comment 8 2009-08-26 00:11:03 PDT
Created attachment 38601 [details] complex_text_second_fix_v2 --- 3 files changed, 26 insertions(+), 7 deletions(-)
Yusuke Sato
Comment 9 2009-08-26 00:12:28 PDT
> nit: please do not include tabs in the ChangeLog. R- for this reason. Fixed, sorry. > This is OK, but maybe it should use the useWindowsDrawing local variable > instead just as the code within the for loop does. What do you think? Agreed. Using useWindowsDrawing seems better than mine. Please take another look. --Yusuke
Eric Seidel (no email)
Comment 10 2009-08-26 03:11:37 PDT
bots are red. Once they green up the commit-queue will land this.
Yusuke Sato
Comment 11 2009-08-27 21:25:49 PDT
Eric, The patch v2 seems not to be landed yet, but the commit queue looks empty. Could you let me know hot to fix this (or could you land the patch)? Thanks, Yusuke
Eric Seidel (no email)
Comment 12 2009-09-11 09:29:25 PDT
The bots have been red all night. :) This should be landing in a matter of hours now that folks are back at work.
Shinichiro Hamaji
Comment 13 2009-09-11 11:57:57 PDT
As it is still not committed, I tried to remove cq+ and give cq+ again. But it seemed not to work. I don't know what we should do... Could someone check this? Thanks!
Eric Seidel (no email)
Comment 14 2009-09-11 12:59:27 PDT
Oh. this bug is closed as fixed! Hence it's not appearing in the queue.
WebKit Commit Bot
Comment 15 2009-09-11 13:09:20 PDT
Comment on attachment 38601 [details] complex_text_second_fix_v2 Clearing flags on attachment: 38601 Committed r48313: <http://trac.webkit.org/changeset/48313>
WebKit Commit Bot
Comment 16 2009-09-11 13:09:25 PDT
All reviewed patches have been landed. Closing bug.
Yusuke Sato
Comment 17 2009-09-11 17:28:45 PDT
> this bug is closed as fixed! Hence it's not appearing in the queue. Ah, I get it now! Eric, Shinichiro, thanks for handling this.
Note You need to log in before you can comment on or make changes to this bug.