2009-08-25  Yusuke Sato  <yusukes@chromium.org>

Reviewed by Darin Fisher.

        [Chromium] Complex text doesn't show up with text stroking
        https://bugs.webkit.org/show_bug.cgi?id=28707

        Skip the NULL check of m_hdc if Windows GDI is not in use.

        * platform/graphics/chromium/FontChromiumWin.cpp:
        (WebCore::Font::drawComplexText):

Canonical link: https://commits.webkit.org/39326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47748 268f45cc-cd09-0410-ab3c-d52691b4dbfc